--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: [Ken Shirakawa Portfolio]
-description: [白川のポートフォリオ (2020/05/02作成)]
+description: [白川のポートフォリオ (2020/05/02作成)]]
+logo:[Img_profile.jpg]
