--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: [Ken Shirakawa Portfolio]
-description: [白川のポートフォリオ (2020/05/02作成)]
-logo: [Img_profile.jpg]
+title: Ken Shirakawa Portfolio
+description: Updated at 2020/05/02
+logo: Img_profile.jpg
