titleを日本語に変更

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: Ken Shirakawa Portfolio
+title: 白川 健のポートフォリオ
 description: Updated at 2020/05/02
 logo: Img_profile.jpg
