--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: Ken Shirakawa (白川 健)
+title: Ken Shirakawa
 description: Updated at 2020/05/02
 logo: Img_profile.jpg
